# Blackjack

./: CMakeLists.txt  Deck.cpp  Deck.h  Game.cpp  Hand.cpp  Player.cpp  Player.h  main.cpp  udo apt install cloc
docs/: README.txt
include/: Card.h  CardTexture.h  Game.h  GameApp.h  Hand.h  Player.h  Settings.h
src/: Card.cpp  CardTexture.cpp  Deck.cpp  Game.cpp  GameApp.cpp  Hand.cpp  Player.cpp  Settings.cpp  main.cpp
